app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

/* Prevent horizontal scrolling */
html, body {
  overflow-x: hidden;
  max-width: 100vw;
}


@font-face {
  font-family: 'Vance Bold';
  src: url('/assets/fonts/vance-bold.otf') format('opentype');
  font-weight: bold;
}

@font-face {
  font-family: 'Vance Light';
  src: url('/assets/fonts/vance-light.otf') format('opentype');
  font-weight: 300;
}

@font-face {
  font-family: 'Vance Regular';
  src: url('/assets/fonts/vance-regular.otf') format('opentype');
  font-weight: normal;
}

@font-face {
  font-family: 'Vance Text';
  src: url('/assets/fonts/vance-text.otf') format('opentype');
  font-weight: normal;
}

/* globals.css or a relevant CSS file */

/* Scroll Snap Container */
.snap-container {
  height: 100vh;
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
  scroll-behavior: smooth;
}

/* Scroll Snap Section */
.snap-section {
  height: 100vh;
  scroll-snap-align: start;
  overflow: hidden;
}

